--- a/fe/package.json
+++ b/fe/package.json
@@ -19,8 +19,11 @@
     "@streamflow/distributor": "^8.0.0",
     "@streamflow/stream": "^8.0.0",
     "@tailwindcss/vite": "^4.1.6",
+    "@tanstack/react-query": "^5.76.0",
+    "axios": "^1.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.6.0",
     "tailwindcss": "^4.1.6",
     "vite-plugin-node-polyfills": "^0.23.0"
   },
