--- a/fe/package.json
+++ b/fe/package.json
@@ -20,7 +20,10 @@
     "@streamflow/stream": "^8.0.0",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.76.0",
+    "@tanstack/react-virtual": "^3.13.8",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.6.0",
