--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-virtual": "^3.13.8",
     "axios": "^1.9.0",
+    "bignumber.js": "^9.3.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
