--- a/fe/package.json
+++ b/fe/package.json
@@ -27,6 +27,7 @@
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router": "^7.6.0",
     "tailwindcss": "^4.1.6",
     "vite-plugin-node-polyfills": "^0.23.0"
